--- a/style.css
+++ b/style.css
@@ -14,12 +14,31 @@ body{
     opacity: 0.8;
 }
 
-h2, h3, p {
+h2, h3, h4, p {
     color: black;
 }
 
-p {
+h1 {
+    font-size: 55px;
+    margin-bottom: 40px;
+}
+
+h4 {
     font-size: 20px;
+}
+
+p {
+    font-size: 35px;
+    color: white;
+    text-align: center;
+}
+
+ul p {
+    text-align: start;
+}
+
+li {
+    color: white;
 }
 
 .home-btn{
@@ -29,4 +48,11 @@ p {
     align-items: center;
     margin-top: 100px;
     text-decoration: none;
+}
+
+.back {
+    max-width: 125px;
+    max-height: 75px;
+    margin: auto;
+    margin-top: 200px;
 }
